# concordance

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  design.md
.github/workflows/: ci.yml  publish.yml
doc/: architecture.md  enumerator.md  pre-release-review.md  roadmap.md  setup.md  testing.md
examples/negotiate/: Cargo.toml
examples/negotiate/src/: main.rs
src/: builder.rs  diagnostic.rs  error.rs  lib.rs  probe.rs
src/engine/: mod.rs  rule.rs
src/engine/checks/: color.rs  dsc.rs  frl.rs  mod.rs  timing.rs
src/enumerator/: mod.rs
src/output/: config.rs  mod.rs  rejection.rs  trace.rs  warning.rs
src/ranker/: mod.rs  policy.rs
src/types/: cable.rs  candidate.rs  mod.rs  sink.rs  source.rs
tests/: negotiate.rs
