[package]
name = "concordance"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
license = "MPL-2.0"

[features]
default = ["std"]
std = ["alloc", "display-types/std"]
alloc = ["display-types/alloc"]
serde = ["dep:serde", "display-types/serde"]

[dependencies]
bitflags = "2.4"
display-types = { path = "../display-types", default-features = false }
thiserror = { version = "2", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
