[package]
name = "concordance"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A library for negotiating HDMI 2.1 modes."
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/DracoWhitefire/concordance"
keywords = ["hdmi", "display", "negotiation", "embedded", "no_std"]
categories = ["hardware-support", "embedded", "parser-implementations"]

[features]
default = ["std"]
std = ["alloc", "display-types/std"]
alloc = ["display-types/alloc"]
serde = ["dep:serde", "display-types/serde"]

[dependencies]
bitflags = "2.4"
display-types = { version = "0.3", default-features = false }
thiserror = { version = "2", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
display-types = { version = "0.3", features = ["std"] }
serde_json = "1"
